<resources>
    <!-- General-->
    <string name="add">add</string>
    <string name="add_and_clear">add and clear</string>
    <string name="app_name">RC-Assi</string>
    <string name="back">back</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>

    <!-- EditGroup-->
    <string name="group_name">group name:</string>
    <string name="member">members:</string>
    <string name="first_name_surname">first name and surname</string>
    <string name="return_to_group_menu">back to group selection</string>

    <!-- Receipt-->
    <string name="market">market</string>
    <string name="total_sum">total</string>
    <string name="date">date</string>
    <string name="add_receipt">Adding a new receipt</string>
    <string name="distribute_articles">go to distribution</string>
    <string name="status">date</string>
    <string name="payer">payer</string>

    <!-- Article-->
    <string name="article_name">article name</string>
    <string name="amount">amount</string>
    <string name="price">price/unit</string>
    <string name="currency_symbol">€</string>
    <string name="assigned">€</string>

    <!-- Assignments-->
    <string name="assign_articles_to_persons">assign articles to persons</string>
    <string name="owner">owner</string>
    <string name="share_with">shared with</string>
    <string name="assignment_item_article">article</string>
    <string name="assignment_item_price">price</string>

    <!-- Camera-->
    <string name="take_photo">take photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>